--- a/homeapp/templates/homeapp/services/individuals/administrative_pinalties_service.html
+++ b/homeapp/templates/homeapp/services/individuals/administrative_pinalties_service.html
@@ -40,7 +40,7 @@
             рассмотрение вашего дела и защиту ваших прав.</p>
     </div>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -50,7 +50,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
