--- a/homeapp/templates/homeapp/services/individuals/consumer_protection_service.html
+++ b/homeapp/templates/homeapp/services/individuals/consumer_protection_service.html
@@ -44,7 +44,7 @@
             от недобросовестных действий со стороны компаний или организаций.</p>
     </div>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -54,7 +54,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
