--- a/homeapp/templates/homeapp/services/individuals/family_matters_service.html
+++ b/homeapp/templates/homeapp/services/individuals/family_matters_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Услуги адвоката по семейным делам</h1>
 
         <p>Услуги адвоката по семейным делам могут быть необходимы в различных ситуациях, связанных
@@ -44,9 +44,9 @@
             может помочь вам эффективно решить любые правовые вопросы, связанные с вашими семейными отношениями.
             Обращение к такому специалисту может обеспечить вам необходимую поддержку и защиту в сложных
             жизненных ситуациях.</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -56,7 +56,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
