--- a/homeapp/templates/homeapp/services/individuals/individual_bankruptcy_service.html
+++ b/homeapp/templates/homeapp/services/individuals/individual_bankruptcy_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Услуги адвоката по банкротству физических лиц</h1>
 
         <p>Адвокат по банкротству физических лиц специализируется на предоставлении правовой помощи людям,
@@ -40,9 +40,9 @@
             значительно облегчить его протекание и защитить ваши интересы. Обращение к адвокату по банкротству
             поможет вам пройти через этот трудный период с минимальными потерями и негативными последствиями
             для вашего финансового будущего.</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -52,7 +52,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
