--- a/homeapp/templates/homeapp/services/individuals/individual_service_list.html
+++ b/homeapp/templates/homeapp/services/individuals/individual_service_list.html
@@ -111,7 +111,7 @@
                 </ul>
         </div>
 
-        <div class="send-request">
+        <section class="send-request">
                 <div class="container">
                         <div class="send-request__inner">
                                 <div class="send-request__content">
@@ -121,7 +121,7 @@
                                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
                         </div>
                 </div>
-        </div>
+        </section>
 </div>
 
 {% endblock %}
