--- a/homeapp/templates/homeapp/services/individuals/land_disputes_service.html
+++ b/homeapp/templates/homeapp/services/individuals/land_disputes_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Услуги адвоката по земельным спорам</h1>
 
         <p>Адвокат, специализирующийся на земельных спорах, предоставляет юридическую помощь и защиту интересов
@@ -43,9 +43,9 @@
 
         <p>Адвокат по земельным спорам имеет специализированные знания и опыт в области земельного законодательства
             и поможет вам защитить ваши интересы в случае возникновения споров или проблем с земельными правами.</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -55,7 +55,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
