--- a/homeapp/templates/homeapp/services/individuals/license_revocation_service.html
+++ b/homeapp/templates/homeapp/services/individuals/license_revocation_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Услуги адвоката по лишению водительских прав</h1>
 
         <p>Услуги адвоката по лишению водительских прав могут быть необходимы в случае, когда вам грозит или уже
@@ -42,9 +42,9 @@
             ситуации. Обращение
             к профессионалу может помочь вам эффективно решить проблему и вернуть ваше право на управление
             автотранспортом.</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -54,7 +54,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
