--- a/homeapp/templates/homeapp/services/individuals/medical_service.html
+++ b/homeapp/templates/homeapp/services/individuals/medical_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Услуги адвокат по возмещению вреда здоровью</h1>
 
         <p>Адвокат, специализирующийся на медицинских делах, оказывает правовую помощь в области
@@ -41,9 +41,9 @@
         <p>Адвокат по медицинским делам обеспечит вам профессиональную юридическую поддержку
             во всех вопросах, связанных с медицинским правом, помогая защитить ваши интересы и права
             в области здравоохранения.</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -53,7 +53,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
