--- a/homeapp/templates/homeapp/services/individuals/migration_service.html
+++ b/homeapp/templates/homeapp/services/individuals/migration_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Услуги адвоката по миграционным делам</h1>
         <p>Услуги адвоката по миграционным делам включают в себя широкий спектр юридических услуг, связанных
             с иммиграцией и законодательством о миграции. Вот некоторые из основных аспектов, с которыми адвокаты
@@ -42,9 +42,9 @@
             с вопросами иммиграции, статуса мигранта, визового режима и других аспектов миграционного права.
             Опытный адвокат поможет клиентам навигировать сложные правовые процессы и обеспечит защиту их прав
             и интересов в области миграции</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -54,7 +54,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
