--- a/homeapp/templates/homeapp/services/individuals/online_consultation_service.html
+++ b/homeapp/templates/homeapp/services/individuals/online_consultation_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Юридические консультации онлайн</h1>
 
         <p>Адвокаты предоставляют различные услуги онлайн, включая юридические консультации.
@@ -36,9 +36,9 @@
         <p>Если у вас есть юридические вопросы или вам нужна помощь адвоката, вы можете найти специалиста,
             предоставляющего
             онлайн услуги, и обсудить с ним свою ситуацию для получения квалифицированной помощи и консультации.</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -48,7 +48,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
