--- a/homeapp/templates/homeapp/services/individuals/traffic_accident_service.html
+++ b/homeapp/templates/homeapp/services/individuals/traffic_accident_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Услуги адвокатов по дорожно-транспортным происшествиям</h1>
 
         <p>Услуги адвокатов по дорожно-транспортным происшествиям (ДТП) могут быть очень полезными в случае аварии или
@@ -41,9 +41,9 @@
         <p>Услуги автоюристов могут значительно облегчить процесс решения юридических вопросов, связанных
             с дорожно-транспортными происшествиями. Опытный автоюрист поможет вам защитить ваши права, получить
             справедливую компенсацию и эффективно решить возникающие юридические проблемы после аварии.</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -53,7 +53,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
