--- a/homeapp/templates/homeapp/services/legals/complex_support.html
+++ b/homeapp/templates/homeapp/services/legals/complex_support.html
@@ -6,7 +6,7 @@
 
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Комплексное абонентское сопровождение адвокатом</h1>
         <div class="row">
             <ul class="list-group list-group-flush service__texts">
@@ -46,9 +46,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -58,7 +58,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock content %}
