--- a/homeapp/templates/homeapp/services/legals/insolvency_support.html
+++ b/homeapp/templates/homeapp/services/legals/insolvency_support.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Сопровождение банкротсва (субсидиарная ответсвенность)</h1>
         <div class="row">
             <ul class="list-group list-group-flush service__texts">
@@ -25,9 +25,9 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -37,7 +37,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
