--- a/homeapp/templates/homeapp/cases_auto.html
+++ b/homeapp/templates/homeapp/cases_auto.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -37,7 +37,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 
