--- a/homeapp/templates/homeapp/news_list.html
+++ b/homeapp/templates/homeapp/news_list.html
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -85,7 +85,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </section>
 {% endif %}
 
