--- a/homeapp/templates/homeapp/services/individuals/civil_defense.html
+++ b/homeapp/templates/homeapp/services/individuals/civil_defense.html
@@ -52,7 +52,7 @@
             юридических вопросов.</p>
     </div>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -62,7 +62,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
