--- a/homeapp/templates/homeapp/services/individuals/criminal_defense.html
+++ b/homeapp/templates/homeapp/services/individuals/criminal_defense.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -63,7 +63,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock content %}
