--- a/homeapp/templates/homeapp/services/individuals/debt_recovery_service.html
+++ b/homeapp/templates/homeapp/services/individuals/debt_recovery_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Услуги адвоката по взысканию долгов</h1>
 
         <p>Адвокат, специализирующийся на взыскании долгов, предоставляет юридическую помощь и защиту
@@ -44,9 +44,9 @@
         <p>Адвокат по взысканию долгов поможет вам эффективно и законно вернуть задолженные
             средства, обеспечивая профессиональное представительство и поддержку в данной
             юридической области</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -56,7 +56,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
