--- a/homeapp/templates/homeapp/services/individuals/enforcement_lawyer_service.html
+++ b/homeapp/templates/homeapp/services/individuals/enforcement_lawyer_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Услуги адвоката по работе с приставами</h1>
 
         <p>Адвокат, специализирующийся на работе с приставами, предоставляет правовую помощь в случаях,
@@ -41,9 +41,9 @@
         <p>Адвокат по работе с приставами обеспечит вам квалифицированную правовую поддержку
             и защиту в случае возникновения проблем с приставами, помогая вам эффективно решить
             возникающие юридические вопросы..</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -53,7 +53,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
