--- a/homeapp/templates/homeapp/services/individuals/inheritance_service.html
+++ b/homeapp/templates/homeapp/services/individuals/inheritance_service.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="service">
+    <section class="service">
         <h1 class="page-section__title">Услуги адвоката по делам о наследстве</h1>
 
         <p>Услуги адвоката по делам о наследстве включают в себя широкий спектр юридических услуг, связанных
@@ -42,9 +42,9 @@
         <p>Услуги адвоката по делам о наследстве могут быть очень полезны для тех, кто сталкивается с вопросами
             передачи имущества после смерти близких родственников. Опытный адвокат поможет клиентам разобраться
             в сложных юридических аспектах наследственного права и обеспечит защиту их интересов в этом процессе.</p>
-    </div>
+    </section>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -54,7 +54,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
