--- a/homeapp/templates/homeapp/services/legals/legal_service_list.html
+++ b/homeapp/templates/homeapp/services/legals/legal_service_list.html
@@ -28,7 +28,7 @@
         </ul>
     </div>
 
-    <div class="send-request">
+    <section class="send-request">
         <div class="container">
             <div class="send-request__inner">
                 <div class="send-request__content">
@@ -38,7 +38,7 @@
                 <img class="send-request__img" src="{% static 'homeapp/img/form-img.png' %}">
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 {% endblock %}
