--- a/homeapp/templates/homeapp/services/individuals/individual_service_list.html
+++ b/homeapp/templates/homeapp/services/individuals/individual_service_list.html
@@ -111,10 +111,8 @@
                 </ul>
         </div>
 
-        <section>
-                <div class="container">
-                        {% include "homeapp/forms/consultation_form.html" %}
-                </div>
-        </section>
+<div class="form-wrapper">
+    {% include "homeapp/forms/amo-form.html" %}
+</div>
 </div>
 {% endblock %}
