--- a/homeapp/static/homeapp/css/style.css
+++ b/homeapp/static/homeapp/css/style.css
@@ -917,7 +917,7 @@ h2 {
 }
 
 .send-request__img {
-  max-height: 174px;
+  max-height: 360px;
   margin-top: 24px;
 }
 
@@ -1337,3 +1337,25 @@ button:focus {
     width: 100%;
   }
 }
+
+.form-wrapper {
+  display: flex;
+  justify-content: center; /* Горизонтальное выравнивание */
+  align-items: center; /* Вертикальное выравнивание */
+  padding-top: 24px;
+}
+
+form {
+    /* Можно добавить ширину формы для контроля */
+    width: 100%; /* Или укажите фиксированную ширину, если необходимо */
+}
+
+.send-request__img {
+    width: 100%; /* Изображение будет занимать всю ширину доступного блока */
+    max-width: 600px; /* Ограничьте максимальную ширину, чтобы изображение не растягивалось слишком сильно */
+    object-fit: contain; /* Сохранение пропорций */
+    margin-left: auto; /* Центрируем изображение */
+    margin-right: auto; /* Центрируем изображение */
+    display: block; /* Устанавливаем изображение как блочный элемент */
+}
+
