--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -105,8 +105,8 @@
       <a class="navbar-brand" href="{% url 'homeapp:index' %}">
         <img src="{% static 'homeapp/img/logo.png' %}" alt="" />
       </a>
-      <a style="width: 22px;height: 38px;" href="" class="logo-mob">
-        <img style="width: 100%;height: auto; object-fit: contain;"
+      <a href="{% url 'homeapp:index' %}" class="logo-mob">
+        <img
           src="{% static 'homeapp/img/Frame 1000000988.png' %}" alt="" alt="">
       </a>
       <div class="d-flex gap-2">
