фотки и второй сайт

--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -166,7 +166,7 @@
                 </a>
               </li>
               <li>
-                <a class="dropdown-item" href="https://mkapartner.ru/">
+                <a class="dropdown-item" href="https://ulsk.mkapartner.ru/">
                   Филиал в Ульяновске
                 </a>
               </li>
