--- a/homeapp/static/homeapp/css/style.css
+++ b/homeapp/static/homeapp/css/style.css
@@ -1279,6 +1279,18 @@ button:focus {
   }
 }
 
+@media screen and (max-width: 1080px) {
+  .banner__content  {
+    flex-direction: column;
+    gap: 36px;
+    align-items: center;
+  }
+
+  .banner__text {
+    max-width: none;
+  }
+}
+
 @media only screen and (max-width: 1024px) {
   body {
     height: 100%;
