--- a/homeapp/static/homeapp/css/style.css
+++ b/homeapp/static/homeapp/css/style.css
@@ -1348,6 +1348,12 @@ button:focus {
   }
 }
 
+@media screen and (max-width: 654px) {
+  .banner__buttons {
+    flex-direction: column;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .cases__item {
     width: 100%;
