--- a/homeapp/static/homeapp/css/style.css
+++ b/homeapp/static/homeapp/css/style.css
@@ -1273,6 +1273,11 @@ button:focus {
   flex-direction: column;
 }
 
+.banner {
+  background-color: #1a2a4b;
+  padding: 50px 0;
+}
+
 @media screen and (max-width: 1200px) {
   .cases__item {
     width: calc(100% / 3 - 6px);
